--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,16 @@
-aiohttp==3.9.3
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-appnope==0.1.4
-asttokens==3.0.0
-attrs==23.2.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blinker==1.7.0
-Bootstrap-Flask==2.2.0
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-decorator==5.2.1
-defusedxml==0.7.1
-docopt==0.6.2
-executing==2.2.0
-fastjsonschema==2.21.1
-Flask==2.3.2
-Flask-WTF==1.2.1
-frozenlist==1.4.1
-idna==3.6
-ipython==8.12.3
-itsdangerous==2.1.2
-jedi==0.19.2
-Jinja2==3.1.3
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-lxml==5.1.0
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
-mistune==3.1.2
-multidict==6.0.4
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-numpy==1.26.3
-packaging==24.2
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-platformdirs==4.3.6
-prompt_toolkit==3.0.50
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.19.1
-PyJWT==2.8.0
-pyperclip==1.8.2
-python-dateutil==2.8.2
-pytz==2023.3.post1
-pyzmq==26.3.0
-referencing==0.36.2
-requests==2.31.0
-rpds-py==0.23.1
-six==1.16.0
-soupsieve==2.5
-stack-data==0.6.3
-tinycss2==1.4.0
-tornado==6.4.2
-traitlets==5.14.3
-twilio==8.12.0
-typing_extensions==4.12.2
-tzdata==2023.4
-urllib3==2.1.0
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.0.0
+Bootstrap_Flask==2.3.3
+Flask_CKEditor==0.5.1
+Flask_Login==0.6.3
+Flask-Gravatar==0.5.0
+Flask_WTF==1.2.1
 WTForms==3.0.1
-yarg==0.1.9
-yarl==1.9.4
+Werkzeug==3.0.0
+Flask==2.3.2
+flask_sqlalchemy==3.1.1
+SQLAlchemy==2.0.25
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+requests==2.32.3
+
+xmltodict~=0.14.2
+weasyprint~=63.1
